@@ -10,3 +10,4 @@
  1-Aug-2021 - V0.18 Add support scanning and evaluating obsolete entries
 26-Aug-2021 - V0.19 Update dependencies
 21-Sep-2021 - V0.20 Add UpdateHoldingsProvider(), and discoveryMode option for local and remote repos in RespositoryProvider().
+27-Sep-2021 - V0.21 Adjust URI paths in RespositoryProvider() and patch to compute missing BIRD annotations in the public archive
